[package]
name = "rust-proxy"
version = "0.1.2"
edition = "2021"

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"

[dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "net", "time", "io-util", "macros", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "local-time"] }
tracing-appender = "0.2"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
url = "2.0"
trust-dns-resolver = { version = "0.23", features = ["tokio-runtime"] }
tokio-native-tls = "0.3"
service-manager = "0.11"

[target.'cfg(windows)'.dependencies]
windows-service = "0.6"

[target.x86_64-unknown-linux-musl.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
