[package]
name = "rust-proxy"
version = "0.1.8"
edition = "2021"

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"

[dependencies]
tokio = { version = "1.52", features = ["rt", "rt-multi-thread", "net", "time", "io-util", "macros", "sync"] }
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
toml = "1.0"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
url = "2.5"

tokio-native-tls = "0.3"
service-manager = "0.11"

[target.'cfg(windows)'.dependencies]
windows-service = "0.6"

[target.'cfg(target_os = "linux")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
